updated CV and fixed project card sizing issue on mobile

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -13,6 +13,7 @@
     background-color: transparent;
 
     width: 80%;
+    max-width: 350px;
     height: 100%;
     border-radius: 5px;
     position: relative;
